gdnative/tests/ui/export_fail_03.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
pub union Foo {
    bar: i32,
}

fn main() {}
